--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "what-to-wear",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "devStart": "nodemon script.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -33,11 +35,13 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
