--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true
   },
+  "ts-node": {
+    "esm": true
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
   "exclude": ["node_modules"]
 }
